Fix alignment of text on status-bar

--- a/src/styles/_project.sass
+++ b/src/styles/_project.sass
@@ -26,6 +26,9 @@ $project-sidebar-background: lighten($color-background, 5%)
 	span#status-bar
 		left: $project-sidebar-width
 
+#project_context-header
+	span#status-bar
+		text-align: left
 
 #project_nav-container
 	position: fixed
